Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26171

wsrep_sst_receive_address does not parse IPv6 address in wsrep_node_address correctly

    XMLWordPrintable

Details

    Description

      `wsrep_sst_receive_address` defaults to `wsrep_node_address`.

      When `wsrep_node_address` is set to an IPv6 address and `wsrep_sst_receive_address` is not set or set to its default value of 'AUTO', `wsrep_node_address`'s IPv6 address does not seem to be parsed correctly. SST fails with:

      rsync: b6d:982:1aae:565:478:828:f51: invalid numeric value (in daemon mode)
      

      I have not tested this with another SST method than rsync. Omitting brackets around the IPv6 address in `wsrep_node_address` does not make a difference.

      Non-functional config:

      wsrep_node_address = '[fc00:b6d:982:1aae:565:478:828:f51]'
      wsrep_sst_receive_address = 'AUTO'
      

      Functional config:

      wsrep_node_address = '[fc00:b6d:982:1aae:565:478:828:f51]'
      wsrep_sst_receive_address = '[fc00:b6d:982:1aae:565:478:828:f51]:4444'
      

      Attachments

        1. ipv6.patch
          3 kB
          Max Kondratenko

        Activity

          People

            sysprg Julius Goryavsky
            wedwards William David Edwards
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.